[package]
name = "nom_pem"
version = "1.0.0"
authors = ["d.maetzke@bpressure.net"]
include = ["LICENSE", ".gitignore", "Cargo.toml", "src/*.rs", "README.md"]
description = "PEM parser (rfc1421) based of nom"
keywords = ["parser", "parsing", "PEM", "rfc1421", "nom" ]
categories = ["PEM"]
license = "MIT"
repository = "https://github.com/bpressure/nom_pem"

[dependencies]
nom = "^3.2"
